[tool.poetry]
name = "myfunctions"
version = "0.1.0"
description = ""
authors = ["guccisan <yamskymtb0903@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
lightgbm = "^3.3.2"
jupyter = "^1.0.0"
seaborn = "^0.12.0"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
